--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
     <div class="container">
         <div class="search-box">
             <div class="search-wrapper">
-                <input type="text" id="country-search" placeholder="Search Country">
+                <input type="text" autocomplete="off" id="country-search" placeholder="Search Country">
                 <i class="fas fa-search"></i>
                 <div id="country-dropdown" class="dropdown"></div>
             </div>
             <div class="search-wrapper">
-                <input type="text" id="city-search" placeholder="Search City" disabled>
+                <input type="text" autocomplete="off" id="city-search" placeholder="Search City" disabled>
                 <i class="fas fa-search"></i>
             </div>
         </div>
